# iterative_dashboard

./: app.py  competitors_data.csv  pyproject.toml  startup_data.csv
