[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = ""
authors = ["Shen Nan <wongshennan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
streamlit = "^1.25.0"
pandas = "^2.0.3"
numpy = ">=1.16.0,<1.24"
plotly-express = "^0.4.1"
streamlit-pandas-profiling = "^0.1.3"
pydantic = ">=1.8.1,<2"
protobuf = "==3.20.*"
ydata-profiling = "^4.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
